<resources>
    <string name="app_name">E-Market</string>
    <string name="add_to_cart">Add to Cart</string>

    //Base-Fragment
    <string name="loading">Loading...!!!</string>
    //Home Fragment
    <string name="added_to_card">Successfully Added in Box.</string>
    <string name="filters">Filters:</string>
    //Detail Fragment
    <string name="price">Price:</string>
    //ShoppingBox Fragment
    <string name="total">Total:</string>
    <string name="complete">Complete</string>
    <string name="emptyBox">There is No Product in Your Basket...</string>
    <string name="payment_continue">Payment is Starting...</string>
    <string name="tl"> ₺</string>
    //Favourites Fragment
    <string name="favourites">Favourites</string>

    //Filter
    <string name="left_filter">You left without pressing the Save button...</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="old_to_new">Old to New</string>
    <string name="new_to_old">New to Old</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>

</resources>