<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardElevation="@dimen/dp_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/close"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_20"
                android:src="@drawable/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/filter"
                android:textSize="@dimen/text_size_24" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textColor="@color/grey2"
                android:textSize="@dimen/text_size_14" />

            <!-- RadioGroup ve RadioButton 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/oldToNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:buttonTint="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/old_to_new"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <!-- RadioGroup ve RadioButton 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/newToOld"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:buttonTint="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_to_old"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/priceHightToLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:buttonTint="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_high_to_low"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/PriceLowToHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue"
                    android:buttonTint="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_low_to_high"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textColor="#888585"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/searchCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTv"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_20"
                app:cardElevation="@dimen/dp_8">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchBrandView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@color/white"
                    app:queryHint="@string/search" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brandRv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_135"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:scrollbars="vertical"
            tools:itemCount="3"
            tools:listitem="@layout/brand_row" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model"
            android:textColor="#888585"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/modelCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTv"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_20"
                app:cardElevation="@dimen/dp_8">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/modelSearchView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@color/white"
                    app:queryHint="@string/search" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/modelRv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_135"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:scrollbars="vertical"
            tools:itemCount="3"
            tools:listitem="@layout/brand_row" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterCompleteButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blue"
        android:text="@string/completed"
        android:textColor="@color/white" />

</LinearLayout></ScrollView>


    </LinearLayout>