<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.ShoppingBoxFragment">
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_20"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/titleText"
        android:id="@+id/shoppingBoxRv"
        android:layout_width="match_parent"
        android:layout_above="@+id/bottomRl"
        tools:listitem="@layout/shopping_box_row"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/bottomRl"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="@dimen/dp_20">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/addToCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/complete" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>